--- a/assets/styles.css
+++ b/assets/styles.css
@@ -46,6 +46,7 @@ img {
     border-radius: 5px;
     box-shadow: 1px 2px 3px 1px rgba(0,0,0,0.2);
     max-width: 100%;
+    max-height: fit-content;
 }
 
 /* 
@@ -275,6 +276,31 @@ ASIDE STYLES
 
 aside {
     border-top: 2px solid rgba(0,0,0,0.1);
+}
+
+.image-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas: 
+        "image-tom1 image-tom1 image-tom2"
+        "image-tom3 image-tom3 image-tom3";
+
+}
+
+.image-tom1 {
+    grid-area: image-tom1;
+}
+
+.image-tom2 {
+    grid-area: image-tom2;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.image-tom3 {
+    grid-area: image-tom3;
 }
 
 /* 
