--- a/assets/styles.css
+++ b/assets/styles.css
@@ -43,8 +43,6 @@ p {
 }
 
 img {
-    border-radius: 5px;
-    box-shadow: 1px 2px 3px 1px rgba(0,0,0,0.2);
     max-width: 100%;
     max-height: fit-content;
 }
@@ -222,51 +220,82 @@ nav {
 
 /* 
 ==============================
-COLLAGE STYLES
+GRID STYLES
 ==============================
 */
 
 .collage {
-    height: auto;
     display: grid;
+    grid-template-columns: 1fr 40px 1fr 40px 1fr;;
     grid-template-rows: 1fr;
-    grid-template-columns: 1fr 40px 1fr 40px 1fr;
-    align-items: center;
-}
-
-.collage * {
-    grid-row-start: 1;
-    grid-row-end: 2;
     
 }
 
 .collage-1 {
-    grid-area: named-c1;
+    grid-area: collage-1;
     grid-column-start: 1;
     grid-column-end: 3;
     z-index: 1;
-    transform: rotate(-4deg);
+    transform: rotate(-5deg);
 }
 
 .collage-2 {
-    grid-area: named-c2;
+    grid-area: collage-2;
+    position: relative;
     grid-column-start: 2;
     grid-column-end: 5;
     z-index: 2;
-    box-shadow: 2px 4px 10px 2px rgba(0,0,0,0.5);
 }
 
 .collage-3 {
-    grid-area: named-c3;
+    grid-area: collage-3;
     grid-column-start: 4;
     grid-column-end: 6;
     z-index: 1;
-    transform: rotate(4deg);
+    transform: rotate(5deg);
+}
+
+.image-link {
+    display: block;
+    width: 100%;
+    height: 100%;
+    overflow: hidden; 
+}
+
+.collage img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+main .pythonheader {
+    position: absolute;
+    z-index: 3;
+    bottom: 10%;
+    left: 20%;
+    width: auto;
+    text-align: center;
+    background-color: #4CA8A1; 
+    padding: 0; 
+    margin: 0;
 }
 
 main h3 {
+    position: absolute;
+    z-index: 3;
+    bottom: 50%;
+    left: 20%;
+    width: auto;
     text-align: center;
+    background-color: #4CA8A1; 
+
+    padding: 0; /* Adjust padding as needed */
+    margin: 0; /* Remove default margin */
 }
+
+
+
 
 /* 
 ==============================
@@ -274,33 +303,44 @@ ASIDE STYLES
 ==============================
 */
 
-aside {
-    border-top: 2px solid rgba(0,0,0,0.1);
+aside img {
+    border-radius: 5px;
+    box-shadow: 1px 2px 3px 1px rgba(0,0,0,0.2);
 }
 
 .image-container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    grid-template-areas: 
-        "image-tom1 image-tom1 image-tom2"
-        "image-tom3 image-tom3 image-tom3";
-
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 40px 1fr 40px 1fr;
+    align-items: center;
 }
 
 .image-tom1 {
     grid-area: image-tom1;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    z-index: 1;
+    transform: rotate(-4deg);
 }
 
 .image-tom2 {
     grid-area: image-tom2;
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
+    grid-column-start: 2;
+    grid-column-end: 5;
+    z-index: 2;
+    box-shadow: 2px 4px 10px 2px rgba(0,0,0,0.5);
 }
 
 .image-tom3 {
     grid-area: image-tom3;
+    grid-column-start: 4;
+    grid-column-end: 6;
+    z-index: 1;
+    transform: rotate(4deg);
+}
+
+aside {
+    border-top: 2px solid rgba(0,0,0,0.1);
 }
 
 /* 
@@ -309,7 +349,7 @@ CSS FOOTER STYLES
 ==============================
  */
 
- footer {
+footer {
     grid-area: named-footer;
 }
 
