--- a/assets/styles.css
+++ b/assets/styles.css
@@ -11,13 +11,13 @@ SHARED CSS
 }
 
 html {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 16px;
     color:  rgb(53, 53, 53);
 }
 
 header {
-    background-color: #57102C;
+    background: linear-gradient(to left, #2e0570, rgb(0, 0, 0));;
     color: antiquewhite;
 }
 
@@ -36,6 +36,7 @@ h2,
 h3 {
     margin-top: 10px;
     margin-bottom: 20px;
+    color: #FF69B4;
 }
 
 p {
@@ -56,7 +57,6 @@ CSS OUTER GRID STYLES
 .outer-grid {
     display: grid;
     height: 100vh;
-    background-color: antiquewhite;
     grid-template-rows: 70px 1fr;
     grid-template-columns: 90px 1fr;
     grid-template-areas: 
@@ -161,7 +161,7 @@ header a {
 }
 
 .header-link:hover {
-    color: #A92159; 
+    color: #FF69B4; 
     opacity: 0.8;
     cursor: pointer; 
 }
@@ -181,6 +181,7 @@ NAV STYLES
 nav {
     padding-top: 20px;
     border-right: 2px solid rgba(0,0,0,0.1);
+    background-color: antiquewhite;
 }
 
 .nav-link {
@@ -198,7 +199,7 @@ nav {
 .nav-link:hover {
     cursor: pointer;
     opacity: 0.8;
-    color: #57102C; 
+    color: #FF69B4; 
 }
 
 .nav-link:hover::after {
@@ -210,7 +211,7 @@ nav {
     content: "";
     display: block;
     height: 2px;
-    background: #57102C;
+    background: #FF69B4;
     left: 50%;
     width: 0;
     bottom: -4px;
@@ -327,7 +328,7 @@ aside img {
 .grid-item img {
     width: auto;
     height: auto;
-    transition: transform 0.3s ease-in-out, z-index 0s 0.3s;
+    transition: transform 0.1s ease-in-out, z-index 0s 0.1s;
 }
 
 .grid-item.expanded {
@@ -360,12 +361,16 @@ footer {
     grid-area: named-footer;
     width: 100%;
     bottom: 0;
-    background: linear-gradient(to right, #A92159, #57102C);
+    background: linear-gradient(to right, #2e0570, rgb(0, 0, 0));
     color: antiquewhite;
     padding: 25px 0;
     border-top-left-radius: 100px;
     font-size: 15px;
     line-height: 20px;
+}
+
+footer h3 {
+    color: antiquewhite;
 }
 
 .col {
@@ -384,7 +389,7 @@ footer {
 .copyright {
     text-align: center;
     padding: 0;
-    margin: 0;
+    margin: 10px 0;
     font-size: 10px;
 }
 
