--- a/assets/styles.css
+++ b/assets/styles.css
@@ -148,6 +148,8 @@ header {
 
 header a {
     color: var(--main-background-color);
+    padding: 0;
+    margin: 0;
 }
 
 .left-header {
@@ -166,6 +168,7 @@ header a {
 
 .right-header {
     display: flex;
+    font-size: 14px;
 }
 
 .header-link {
